# vitalicals-cli

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  taplo.toml
btc/p2tr-builder/: Cargo.toml
btc/p2tr-builder/src/: coin_selector.rs  lib.rs
btc/script-builder/: Cargo.toml
btc/script-builder/src/: lib.rs
cli/: Cargo.toml  build.rs
cli/src/: lib.rs
cli/src/sub/: context.rs  deploy.rs  mint.rs  mod.rs  query.rs  transfer.rs  utils.rs  wallet.rs
cli/src/sub/move_resource/: mod.rs  name.rs  vrc20.rs  vrc721.rs
cli/src/sub/query/: mod.rs  resources.rs  vrc20.rs
client/: Cargo.toml
client/src/: context.rs  lib.rs  parser.rs  resource.rs  used_utxo.rs
client/src/vital_script_runner/: mod.rs
interfaces/electrum/: Cargo.toml
interfaces/electrum/src/: lib.rs  traits.rs
interfaces/indexer/: Cargo.toml
interfaces/indexer/src/: client.rs  lib.rs  simulator.rs  traits.rs
primitives/: Cargo.toml
primitives/src/: consts.rs  id.rs  lib.rs  resource.rs  types.rs
vital-script/: Cargo.toml
vital-script/builder/: Cargo.toml
vital-script/builder/src/: lib.rs
vital-script/builder/src/templates/: deploy_vrc20.rs  mint_name.rs  mint_vrc20.rs  mint_vrc721.rs  mod.rs  move_name.rs  move_vrc20.rs  move_vrc721.rs
vital-script/derive/: Cargo.toml
vital-script/derive/src/: lib.rs  opcode.rs
vital-script/instruction/: Cargo.toml
vital-script/instruction/src/: assert_input.rs  assert_output.rs  lib.rs
vital-script/opcodes/: Cargo.toml
vital-script/opcodes/src/: lib.rs  opcode.rs
vital-script/opcodes/src/basic/: mod.rs  op_input.rs  op_output.rs  op_transfer.rs
vital-script/ops/: Cargo.toml
vital-script/ops/src/: consts.rs  lib.rs  opcodes.rs  parser.rs  utils.rs
vital-script/ops/src/basic/: mod.rs  op_input.rs  op_mint.rs  op_output.rs  op_transfer.rs
vital-script/ops/src/builder/: instruction.rs  mod.rs
vital-script/ops/src/instruction/: assert_input.rs  assert_output.rs  mod.rs  resource_burn.rs  resource_deploy.rs  resource_mint.rs  resource_move.rs  utils.rs
vital-script/ops/src/op_basic/: mod.rs  op_input.rs  op_mint.rs  op_move.rs  op_output.rs
vital-script/ops/src/op_extension/: mod.rs  op_burn.rs  op_deploy.rs
vital-script/ops/src/op_extension /: mod.rs
vital-script/primitives/: Cargo.toml
vital-script/primitives/src/: consts.rs  lib.rs  names.rs
vital-script/primitives/src/names/: long_name.rs  mod.rs  name.rs  short_name.rs
vital-script/primitives/src/opcodes/: basic.rs  mod.rs
vital-script/primitives/src/opcodes/basic/: op_input.rs  op_output.rs  op_transfer.rs
vital-script/primitives/src/resources/: mod.rs  vrc20.rs  vrc721.rs  vrc721_named.rs
vital-script/primitives/src/traits/: context.rs
vital-script/primitives/src/types/: mod.rs  vrc20.rs
vital-script/runner/: Cargo.toml
vital-script/runner/src/: inputs.rs  lib.rs  mock.rs  outputs.rs  resource_cache.rs
vital-script/runner/src/context/: env.rs  input.rs  mod.rs  runner.rs  script.rs
vital-script/runner/src/traits/: env.rs  mod.rs
vital-script/src/: lib.rs
vital-script/src/block_handler/: mod.rs
wallet/: Cargo.toml
wallet/src/: consts.rs  database.rs  file.rs  lib.rs  wallet.rs
