[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["tulliusder <tulliusder@protonmail.com>"]
repository = "https://github.com/tulliusder/vitalicals-cli"
description = "An CLI for vitalicals"
homepage = "https://github.com/tulliusder/vitalicals-cli"
keywords = ["bitcoin"]
readme = "README.md"
license = "GPL-3.0-only"

[workspace]
resolver = "2"

members = [
    "bin/vitalicals-cli",

    "cli",
    "wallet",
    "client",

    "vital-script",
    "vital-script/primitives",
    "vital-script/ops",
    "vital-script/runner",

    "interfaces/electrum",

    "btc/script-builder",
    "btc/p2tr-builder",

    "primitives",
]

[workspace.dependencies]
anyhow = "1.0"
array-bytes = "6.1"
clap = { version = "4.4.11", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
fdlimit = "0.2.1"
futures = "0.3.26"
ciborium = "0.2.1"
futures-channel = "0.3"
futures-timer = "3.0.1"
futures-util = "0.3"
thiserror = "1.0.48"
log = "0.4"
hex-literal = "0.4"
bitcoin = { version = "0.31.0", features = ["serde", "base64", "rand-std"] }
env_logger = "0.10.0"
tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }
hex = { version = "0.4.3", features = ["alloc"] }
thiserror-no-std = { version = "2.0", default-features = false }
bytes = { version = "1.4.0", default-features = false }

bdk = { version = "0.29.0", features = ["rpc", "all-keys"] }
bdk-macros = "0.6"

primitive-types = "0.12"

cli = { path = "./cli" }
client = { path = "./client" }
wallet = { path = "./wallet" }

vital-primitives = { path = "./primitives" }

vital-script = { path = "./vital-script" }
vital-script-primitives = { path = "./vital-script/primitives" }
vital-script-ops = { path = "./vital-script/ops" }
vital-script-runner = { path = "./vital-script/runner" }

btc-script-builder = { path = "./btc/script-builder" }
btc-p2tr-builder = { path = "./btc/p2tr-builder" }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
