[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["tulliusder <tulliusder@protonmail.com>"]
repository = "https://github.com/tulliusder/vitalicals-cli"
description = "An CLI for vitalicals"
homepage = "https://github.com/tulliusder/vitalicals-cli"
keywords = ["bitcoin"]
readme = "README.md"
license = "GPL-3.0-only"

[workspace]
resolver = "2"

members = [
    "bin/vitalicals-cli",

    "cli",
    "wallet",
    "client",

    "vital-script",
    "vital-script/primitives",
    "vital-script/ops",
    "vital-script/runner",
    "vital-script/derive",
    "vital-script/builder",

    "interfaces/electrum",

    "btc/script-builder",
    "btc/p2tr-builder",

    "primitives",
]

[workspace.dependencies]
anyhow = "1.0"
array-bytes = "6.1"
bitcoin = { version = "0.31.0", default-features = false, features = ["serde", "no-std"] }
bytes = { version = "1.4.0", default-features = false }
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.0"
fdlimit = "0.2.1"
futures = "0.3.26"
futures-channel = "0.3"
futures-timer = "3.0.1"
futures-util = "0.3"
hex = { version = "0.4.3", features = ["alloc"] }
hex-literal = "0.4"
log = "0.4"
parity-scale-codec = "3.6"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.48"
thiserror-no-std = { version = "2.0", default-features = false }
tokio = { version = "1.22.0", features = ["signal", "rt-multi-thread", "parking_lot"] }

scale-info = { version = "2.10.0", features = ["derive", "serde"], default-features = false }

bdk = { version = "0.29.0", features = ["rpc", "all-keys"] }
bdk-macros = "0.6"

primitive-types = { version = "0.12", default-features = false }

cli = { path = "./cli" }
client = { path = "./client" }
wallet = { path = "./wallet" }

vital-primitives = { path = "./primitives" }

vital-script = { path = "./vital-script", default-features = false }
vital-script-builder = { path = "./vital-script/builder", default-features = false }
vital-script-derive = { path = "./vital-script/derive", default-features = false }
vital-script-ops = { path = "./vital-script/ops", default-features = false }
vital-script-primitives = { path = "./vital-script/primitives", default-features = false }
vital-script-runner = { path = "./vital-script/runner", default-features = false }

btc-p2tr-builder = { path = "./btc/p2tr-builder" }
btc-script-builder = { path = "./btc/script-builder" }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
