[package]
name = "cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
futures.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bdk.workspace = true
wallet.workspace = true
btc-script-builder.workspace = true
btc-p2tr-builder.workspace = true

vital-script-builder.workspace = true
vital-script-primitives.workspace = true

[features]
default = ["std"]
std = [
    "vital-script-primitives/std",
    "vital-script-builder/std",
]
