[package]
name = "cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

build = "build.rs"

[dependencies]
anyhow = { workspace = true, features = ["default"] }
bdk.workspace = true
btc-p2tr-builder.workspace = true
btc-script-builder.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
futures.workspace = true
hex = { workspace = true, features = ["default"] }
log = { workspace = true, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wallet.workspace = true
bitcoin.workspace = true

client.workspace = true

vital-script-builder.workspace = true
vital-script-primitives.workspace = true
vital-interfaces-indexer.workspace = true

[features]
default = ["std"]
std = [
    "vital-script-primitives/std",
    "vital-script-builder/std",
]

[build-dependencies]
anyhow = { workspace = true, features = ["default"] }
vergen = { workspace = true }