[package]
name = "vital-primitives"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
hex-literal.workspace = true

bdk = { workspace = true }