[package]
name = "vital-primitives"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
hex-literal.workspace = true
log.workspace = true
tokio.workspace = true

bdk = { workspace = true }
