[package]
name = "vital-primitives"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["default"] }
bdk = { workspace = true }
log = { workspace = true, features = ["std"] }
futures.workspace = true
hex-literal.workspace = true
tokio.workspace = true
