[package]
name = "vital-script"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true

bitcoin.workspace = true

vital-script-ops.workspace = true
vital-script-primitives.workspace = true
vital-script-runner.workspace = true

[features]
default = ["std"]
std = [
    "anyhow/std",
    "log/std",
    "bitcoin/std",
]
scale-info = [
    "vital-script-primitives/scale-info",
]