[package]
name = "vital-script"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }

bitcoin = { workspace = true, default-features = false }

vital-script-ops = { workspace = true, default-features = false }
vital-script-primitives = { workspace = true, default-features = false }
vital-script-runner = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "anyhow/std",
    "log/std",
    "bitcoin/std",
]
scale-info = [
    "vital-script-primitives/scale-info",
]
