[package]
name = "btc-p2tr-builder"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

bdk = { workspace = true }

btc-script-builder.workspace = true
wallet.workspace = true
