[package]
name = "btc-p2tr-builder"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["default"] }
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
futures.workspace = true
hex.workspace = true
log = { workspace = true, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

bdk = { workspace = true }

btc-script-builder.workspace = true

client.workspace = true
wallet.workspace = true
