[package]
name = "btc-script-builder"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
futures.workspace = true
env_logger.workspace = true
hex.workspace = true
hex-literal.workspace = true

bdk.workspace = true

vital-primitives.workspace = true