[package]
name = "btc-script-builder"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
futures.workspace = true
hex-literal.workspace = true
hex.workspace = true
log.workspace = true
tokio.workspace = true

bdk.workspace = true

vital-primitives.workspace = true
