[package]
name = "ss-interface-electrum"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
futures.workspace = true
