[package]
name = "vital-script-builder"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true

vital-script-primitives.workspace = true
vital-script-ops.workspace = true

[features]
default = ["std"]
std = [
    "bytes/std",
    "vital-script-primitives/std",
    "vital-script-ops/std",
]
