[package]
name = "vital-script-derive"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.98", features = ["full", "visit"] }
quote = "1.0.35"
proc-macro2 = "1.0.76"
proc-macro-crate = "3.0.0"

