[package]
name = "vital-script-derive"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.0.0"
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "1.0.98", features = ["full", "visit"] }
