[package]
name = "vital-script-instruction"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
vital-script-primitives.workspace = true

[features]
default = ["std"]
std = [
    "vital-script-primitives/std",
]
