[package]
name = "vital-script-ops"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
serde = { workspace = true, features = ["derive"] }
parity-scale-codec = {workspace = true, features = ["derive", "max-encoded-len"] }

vital-script-primitives.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = ["std"]
std = [
    "bytes/std",
    "serde/std",
    "parity-scale-codec/std",
    "vital-script-primitives/std",
]
