[package]
name = "vital-script-ops"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
parity-scale-codec = {workspace = true, features = ["derive", "max-encoded-len"] }

vital-script-primitives.workspace = true
vital-script-derive.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = ["std"]
std = [
    "bytes/std",
    "parity-scale-codec/std",
    "vital-script-primitives/std",
]
