[package]
name = "vital-script-ops"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
log = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }

vital-script-derive.workspace = true
vital-script-primitives.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = ["std"]
std = [
    "log/std",
    "bytes/std",
    "parity-scale-codec/std",
    "vital-script-primitives/std",
]
