[package]
name = "vital-script-primitives"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
scale-info = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }

bitcoin = { workspace = true, features = ["serde"] }

parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
primitive-types = { workspace = true, features = ["serde", "codec"] }

[features]
default = ["std"]
std = [
    "bytes/std",
    "serde/std",
    "parity-scale-codec/std",
    "primitive-types/std",
    "bitcoin/std",
]
scale-info = [
    "dep:scale-info",
    "primitive-types/scale-info",
]
