[package]
name = "vital-script-runner"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
hex-literal.workspace = true
hex.workspace = true
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }

bitcoin = { workspace = true, features = ["serde"] }

vital-script-ops.workspace = true
vital-script-primitives.workspace = true

[dev-dependencies]
serde_json.workspace = true

vital-script-builder.workspace = true

btc-p2tr-builder.workspace = true
btc-script-builder.workspace = true

[features]
default = ["std"]
std = [
    "bitcoin/std",
    "vital-script-ops/std",
    "vital-script-primitives/std",
]
