[package]
name = "vital-script-runner"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
hex-literal.workspace = true
log = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }

bitcoin = { workspace = true, default-features = false, features = ["serde"] }

vital-script-ops = { workspace = true, default-features = false }
vital-script-primitives = { workspace = true, default-features = false }

[dev-dependencies]
env_logger = { workspace = true, default-features = false }
btc-p2tr-builder.workspace = true
btc-script-builder.workspace = true
serde_json.workspace = true

vital-script-ops = { workspace = true, features = ["std"] }
vital-script-builder = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "log/std",
    "bitcoin/std",
    "vital-script-ops/std",
    "vital-script-primitives/std",
]
